chore: align footer padding with header and ensure footer visibility on mobile devices

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,16 +1,19 @@
 .footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   background: #4d00b4;
   color: white;
   height: 60px;
   font-size: 14px;
-  padding: 18px 25px;
+  padding: 18px 50px;
   width: 100%;
   margin-top: -60px;
 }
 
 @media (max-width: 768px) {
   .footer {
-    display: none;
+    display: block;
   }
 }
 
@@ -20,8 +23,10 @@
 }
 
 .footer-left {
-  display: inline-block;
-  text-align: left;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: start;
   width: 33%;
 }
 
@@ -32,9 +37,10 @@
 }
 
 .footer-right {
-  display: inline-block;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
   width: 33%;
-  padding-left: 10%;
 }
 
 .footer-right-help {
@@ -59,9 +65,9 @@
 }
 
 .footer-right-icons {
-  display: inline-block;
-  width: 60%;
-  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer-right-icons a {
@@ -70,6 +76,33 @@
 
 @media (max-width: 1130px) {
   .footer-right-icons {
-    display: none;
+    display: flex;
+  }
+}
+
+@media (max-width: 858px) {
+  .footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    height: auto;
+  }
+
+  .footer-left,
+  .footer-center,
+  .footer-right {
+    justify-content: center;
+    width: 100%;
+    padding-bottom: 10px;
+  }
+
+  .footer-right-help {
+    padding-bottom: 10px;
+  }
+
+  .footer-right {
+    flex-wrap: wrap;
   }
 }
